# MaturVoxels

./: CMakeLists.txt  README.md
assets/shaders/: default.frag
include/: Camera.h  DirectionalLight.h  LightManager.h  LightSource.h  Mesh.h  Model.h  PointLight.h  SpotLight.h  Texture.h  UBO.h  VBO.h  shaderClass.h
include/glad/: glad.h
src/: Camera.cpp  LightManager.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Texture.cpp  UBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
